--- a/package.json
+++ b/package.json
@@ -4,17 +4,32 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.4",
+    "dataurl": "^0.1.0",
+    "howler": "^2.2.0",
+    "mime-types": "^2.1.27",
+    "music-metadata": "^6.4.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
+    "vue-kinesis": "^1.1.5",
+    "vue-particles": "^1.0.9",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
     "@vue/cli-plugin-router": "^4.3.0",
     "@vue/cli-service": "^4.3.0",
+    "electron": "^5.0.0",
+    "vue-cli-plugin-electron-builder": "^1.4.6",
     "vue-template-compiler": "^2.6.11"
   }
 }
