--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "music-metadata": "^6.4.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
+    "simplex-noise": "^2.4.0",
+    "three": "^0.116.1",
     "vue": "^2.6.11",
     "vue-kinesis": "^1.1.5",
     "vue-particles": "^1.0.9",
