--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue": "^2.6.11",
     "vue-kinesis": "^1.1.5",
     "vue-particles": "^1.0.9",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
