Finished playlist functionality

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass-loader": "^8.0.2",
     "simplex-noise": "^2.4.0",
     "three": "^0.116.1",
+    "uuidv4": "^6.0.6",
     "vue": "^2.6.11",
     "vue-kinesis": "^1.1.5",
     "vue-particles": "^1.0.9",
