--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "dataurl": "^0.1.0",
+    "ffmpeg": "0.0.4",
     "howler": "^2.2.0",
     "mime-types": "^2.1.27",
     "music-metadata": "^6.4.0",
