--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FLB",
+  "name": "flb",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -36,5 +36,8 @@
     "electron": "^5.0.0",
     "vue-cli-plugin-electron-builder": "^1.4.6",
     "vue-template-compiler": "^2.6.11"
+  },
+  "resolutions": {
+    "electron-builder": "22.2.0"
   }
 }
