Still working on mixer

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "fluent-ffmpeg": "^2.1.2",
     "howler": "^2.2.0",
     "mime-types": "^2.1.27",
+    "mkdirp": "^1.0.4",
+    "move-file": "^2.0.0",
     "music-metadata": "^6.4.0",
+    "node-id3": "^0.1.17",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "simplex-noise": "^2.4.0",
