Initializing the Podcasts feature

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dataurl": "^0.1.0",
     "ffbinaries": "^1.1.4",
     "fluent-ffmpeg": "^2.1.2",
+    "interactjs": "^1.9.20",
     "mime-types": "^2.1.27",
     "move-file": "^2.0.0",
     "music-metadata": "^6.4.0",
