--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dataurl": "^0.1.0",
     "ffbinaries": "^1.1.4",
     "fluent-ffmpeg": "^2.1.2",
+    "howler": "^2.2.0",
     "interactjs": "^1.9.20",
     "mime-types": "^2.1.27",
     "move-file": "^2.0.0",
