--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "music-metadata": "^6.4.0",
     "node-id3": "^0.1.17",
     "node-sass": "^4.14.1",
+    "rss-parser": "^3.9.0",
     "sass-loader": "^8.0.2",
     "simplex-noise": "^2.4.0",
     "three": "^0.116.1",
